--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
 	<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		  <div class="container-fluid">
-		    <a class="navbar-brand" href="ex0528.html"><img src="imgs/pet.png" style="width: 50px"></a>
+		    <a class="navbar-brand" href="index.html"><img src="imgs/pet.png" style="width: 50px"></a>
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		      <ul class="navbar-nav">
 		        <li class="nav-item">
-		          <a class="nav-link " aria-current="page" href="ex0528.html">首頁</a>
+		          <a class="nav-link " aria-current="page" href="index.html">首頁</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link active" href="about.html">關於公司</a>
@@ -56,22 +56,22 @@
 			    <div class="carousel-item active">
 			      <img src="imgs/cat1.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <h5>First slide label</h5>
-			        <p>Some representative placeholder content for the first slide.</p>
+			        <h5>南森寵物雲</h5>
+			        <p>永遠給他最好的</p>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
 			      <img src="imgs/cat2.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <h5>Second slide label</h5>
-			        <p>Some representative placeholder content for the second slide.</p>
+			        <h5>溫魯</h5>
+			        <p>狗是唯一愛你甚過你自己的生物</p>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
 			      <img src="imgs/cat3.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <h5>Third slide label</h5>
-			        <p>Some representative placeholder content for the third slide.</p>
+			        <h5>吉姆・大衛</h5>
+			        <p>《受到世俗教化的影響，所有人類都循著同樣的模式生活。只有貓兒不受拘束，有勇氣過自己想要的生活。》 </p>
 			      </div>
 			    </div>
 			  </div>
@@ -116,7 +116,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<ul class="footer-menu">
-				<li><a href="ex0528.html">首頁</a></li>
+				<li><a href="index.html">首頁</a></li>
 				<li><a href="about.html">關於公司</a></li>
 				<li><a href="product.html">商品商城</a></li>
 				<li><a href="humansource.html">人力資源</a></li>
