--- a/humansource.html
+++ b/humansource.html
@@ -13,14 +13,14 @@
 	<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		  <div class="container-fluid">
-		    <a class="navbar-brand" href="ex0528.html"><img src="imgs/pet.png" style="width: 50px"></a>
+		    <a class="navbar-brand" href="index.html"><img src="imgs/pet.png" style="width: 50px"></a>
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		      <ul class="navbar-nav">
 		        <li class="nav-item">
-		          <a class="nav-link" aria-current="page" href="ex0528.html">首頁</a>
+		          <a class="nav-link" aria-current="page" href="index.html">首頁</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="about.html">關於公司</a>
@@ -145,7 +145,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<ul class="footer-menu">
-				<li><a href="ex0528.html">首頁</a></li>
+				<li><a href="index.html">首頁</a></li>
 				<li><a href="about.html">關於公司</a></li>
 				<li><a href="product.html">商品商城</a></li>
 				<li><a href="humansource.html">人力資源</a></li>
