--- a/product.html
+++ b/product.html
@@ -121,7 +121,7 @@
 				  </div>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-3">
 				<div class="card" style="width: 18rem;">
 				  <img src="imgs/service2.jpg" class="card-img-top" alt="...">
 				  <div class="card-body">
