--- a/cart.html
+++ b/cart.html
@@ -86,7 +86,7 @@
 			  </button>
 			</div>	
 	</section>
-	<div class="container">
+	<div class="container col-md-12">
 		<table id="customers">
 		<thead>
 		  <tr>
