--- a/cart.html
+++ b/cart.html
@@ -86,8 +86,8 @@
 			  </button>
 			</div>	
 	</section>
-	<div class="container col-md-12">
-		<table id="customers">
+	<div class="container table-responsive-md">
+		<table id="customers" class="table">
 		<thead>
 		  <tr>
 		  		<div>
