--- a/cart.html
+++ b/cart.html
@@ -86,7 +86,7 @@
 			  </button>
 			</div>	
 	</section>
-	<div class="container table-responsive-md">
+	<div class="container col-md-9 table-responsive-md clearfix">
 		<table id="customers" class="table">
 		<thead>
 		  <tr>
