--- a/cart.html
+++ b/cart.html
@@ -89,7 +89,7 @@
 	<div class="container col-md-9 table-responsive-md clearfix">
 		<table id="customers" class="table">
 		<thead>
-		  <tr>
+		  <tr class="col-md-9">
 		  		<div>
 		  		<th><input type="checkbox" class="checkall form-check-input">全選</th>
 		  		</div>
@@ -101,7 +101,7 @@
 		  </tr>
 		 </thead>
 		 <tbody id="tbody">
-		  <tr class="p-item">
+		  <tr class="p-item col-md-9">
 		  	<td><input type="checkbox" class="j-check"></td>
 		    <td><img src="imgs/service1.jpg" width="100px">寵物墊</td>
 		    <td class="p-price">200</td>
@@ -113,7 +113,7 @@
 		    <td class="p-sum">NT$200</td>
 		    <td><button href="#" class="p-action btn btn-outline-success">刪除</button></td>
 		  </tr>
-		  <tr class="p-item">
+		  <tr class="p-item col-md-9">
 		  	<td><input type="checkbox" class="j-check"></td>
 		    <td><img src="imgs/service2.jpg" width="100px">寵物乾糧</td>
 		    <td class="p-price">300</td>
@@ -125,7 +125,7 @@
 		    <td class="p-sum">NT$300</td>
 		    <td><button href="#" class="p-action btn btn-outline-success">刪除</button></td>
 		  </tr>
-		  <tr class="p-item">
+		  <tr class="p-item col-md-9">
 		  	<td><input type="checkbox" class="j-check"></td>
 		    <td><img src="imgs/service3.jpg" width="100px">除蟲藥</td>
 		    <td class="p-price">500</td>
@@ -138,7 +138,7 @@
 		    <td><button href="#" class="p-action btn btn-outline-success">刪除</button></td>
 		  </tr>
 		</tbody>
-		  <tr>
+		  <tr class="col-md-9">
 		  	<td colspan="4" style="text-align: right;">目前總額</td>
 		  	<td class="total">NT$<em>0</em></td>
 		  	<td><a href="#" class="btn btn-outline-primary">結帳</a></td>
