--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
 	<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		  <div class="container-fluid">
-		    <a class="navbar-brand" href="index11.html"><img src="imgs/pet.png" style="width: 50px"></a>
+		    <a class="navbar-brand" href="index.html"><img src="imgs/pet.png" style="width: 50px"></a>
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
